# platform_packages_modules_adb

./: Android.bp  PREUPLOAD.cfg  TEST_MAPPING  adb.cpp  adb.h  adb_listeners.cpp  adb_mdns.cpp  adb_mdns.h  adb_trace.cpp  adb_utils.cpp  services.cpp  socket_spec.cpp  socket_spec.h  socket_spec_test.cpp  sysdeps.h  test_device.py  transport.cpp  transport.h  transport_test.cpp
client/: adb_install.cpp  commandline.cpp  console.cpp  console_test.cpp  discovered_services.h  host_services.h  main.cpp  mdns_tracker.cpp  mdns_utils.cpp  mdns_utils.h  transport_emulator.cpp  transport_mdns.cpp  usb_libusb.cpp  usb_linux.cpp  usb_linux_netlink.cpp  usb_linux_netlink.h  usb_linux_test.cpp
client/adbmdns/: Android.bp  Cargo.toml  README.md  adbmdns.cpp  adbmdns.h  adbmdns_bridge.h  adbmdns_bridge.rs  index_min_pq.rs  netwatch.rs  rr.rs  store.rs  zero_config.rs  zero_config_driver.rs  zero_config_driver_channel.rs
client/adbmdns/netwatch/: netwatch_darwin.rs  netwatch_linux.rs  netwatch_windows.rs
client/adbmdns/netwatch/netwatch_linux/: util.rs
client/adbmdns/netwatch/netwatch_windows/: wlan_tracker.rs
client/openscreen/: mdns_service.cpp  mdns_service.h
crypto/tests/: Android.bp
daemon/: adb_wifi.cpp  auth.cpp  jdwp_service.cpp  logging.cpp  mdns.cpp  mdns.h  property_monitor.cpp  property_monitor.h  property_monitor_test.cpp  services.cpp  usb.cpp
docs/dev/: README.md  mdns.md  services.md
docs/user/: adb.1.md
pairing_connection/: Android.bp  libadb_pairing_server.map.txt  pairing_server.cpp
proto/: Android.bp  adb_host.proto
tls/tests/: Android.bp
(+7 files in other folders)
