[package]
name = "adb_mdns"
version = "0.1.0"
edition = "2024"

[lib]
path = "adbmdns_bridge.rs"

[dependencies]
socket2 = { version = "0.4.0", features = ["all"] }
get_if_addrs = "0.5.3"
time = "0.3.41"
netwatcher = "0.1.0"
dns-parser = "0.8"
log = "0.4.27"
zerocopy = { version = "0.8.26", features = ["derive"] }
libc = "0.2.174"
anyhow = "1.0.99"
nix = { version = "0.29.0", features = ["socket", "uio"] }

[dependencies.windows-sys]
version = "0.61.1"
features = [
    "Win32_Foundation",
    "Win32_Networking_WinSock",
    "Win32_NetworkManagement_WiFi",
]
