[package]
name = "adb_mdns"
version = "0.1.0"
edition = "2024"

[lib]
name = "zeroconf"
path = "adbmdns_bridge.rs"

[dependencies]
socket2 = { version = "0.4.0", features = ["all"] }
log = {  version = "0.4.27" , features = ["std"] }
simple-dns = "0.11.0"
zerocopy = { version = "0.8.26", features = ["derive"] }
libc = "0.2.174"
anyhow = "1.0.99"
nix = { version = "0.29.0", features = ["socket", "uio"] }
if-addrs = "0.14.0"
mio = { version = "1.1.0", features = ["net", "os-poll"] }

[dependencies.windows-sys]
version = "0.61.1"
features = [
    "Win32_Foundation",
    "Win32_Networking_WinSock",
    "Win32_NetworkManagement_WiFi",
]
